Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -100,11 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.Driver object at 0x7f3d8c5a7be0>\n"
+     ]
+    }
+   ],
    "source": [
-    "flatiron_taxi = None\n",
+    "flatiron_taxi = Driver()\n",
     "print(flatiron_taxi)"
    ]
   },
@@ -123,7 +131,7 @@
    },
    "outputs": [],
    "source": [
-    "ride_to_school = None\n",
+    "ride_to_school = Ride\n",
     "ride_home = None\n",
     "print(ride_to_school, ride_home)"
    ]
